--- a/books-fe/src/app/app.component.html
+++ b/books-fe/src/app/app.component.html
@@ -4,16 +4,18 @@
 
 <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark navwidth">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Book Store</a>
+      <a routerLink="/" class="navbar-brand">Book Store</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">Create New Book</a>
+            <a routerLink="/new" class="nav-link">Create New Book</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
+
+  <router-outlet></router-outlet>
