--- a/books-fe/src/app/new-book/new-book.component.html
+++ b/books-fe/src/app/new-book/new-book.component.html
@@ -1,5 +1,20 @@
-<div class="input-group input-group-lg">
-  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
-  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
+<div class="box">
+  <div><b><h4>Add New Book</h4></b></div><br>
+  <form [formGroup]="bookForm">
+    <div class="form-row">
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Name" formControlName = "name">
+      </div><br>
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Author" formControlName = "author">
+      </div><br>
+      <div class="col">
+        <input type="text" class="form-control" placeholder="ISBN" formControlName = "isbn">
+      </div><br>
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Price" formControlName = "price">
+      </div>
+    </div><br>
+    <button class="btn btn-primary" (click)="onSubmit(bookForm)">Submit</button>
+  </form>
 </div>
-
