--- a/books-fe/src/app/new-book/new-book.component.html
+++ b/books-fe/src/app/new-book/new-book.component.html
@@ -4,17 +4,41 @@
     <div class="form-row">
       <div class="col">
         <input type="text" class="form-control" placeholder="Name" formControlName = "name">
-      </div><br>
+      </div>
+      <div *ngIf="bookForm.controls['name'].invalid && bookForm.controls['name'].touched" class="alert alert-danger">
+        <div *ngIf="bookForm.controls['name'].hasError">
+        Name is required.
+      </div>
+    </div>
+
+   <br>
       <div class="col">
         <input type="text" class="form-control" placeholder="Author" formControlName = "author">
-      </div><br>
+      </div>
+      <div *ngIf="bookForm.controls['author'].invalid && bookForm.controls['author'].touched" class="alert alert-danger">
+        <div *ngIf="bookForm.controls['author'].hasError">
+        Author is required.
+      </div>
+    </div>
+      <br>
       <div class="col">
         <input type="text" class="form-control" placeholder="ISBN" formControlName = "isbn">
-      </div><br>
+      </div>
+      <div *ngIf="bookForm.controls['isbn'].invalid && bookForm.controls['isbn'].touched" class="alert alert-danger">
+        <div *ngIf="bookForm.controls['isbn'].hasError">
+        ISBN is required.
+      </div>
+    </div>
+      <br>
       <div class="col">
         <input type="text" class="form-control" placeholder="Price" formControlName = "price">
       </div>
+      <div *ngIf="bookForm.controls['price'].invalid && bookForm.controls['price'].touched" class="alert alert-danger">
+        <div *ngIf="bookForm.controls['price'].hasError">
+        Price is required.
+      </div>
+    </div>
     </div><br>
-    <button class="btn btn-primary" (click)="onSubmit(bookForm)">Submit</button>
+    <button class="btn btn-primary" [disabled]="!this.bookForm.valid" (click)="onSubmit(bookForm)">Submit</button>
   </form>
 </div>
