table and data added

--- a/books-fe/src/app/book-list/book-list.component.html
+++ b/books-fe/src/app/book-list/book-list.component.html
@@ -2,23 +2,23 @@
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">Name</th>
+        <th scope="col">Author</th>
+        <th scope="col">ISBN Number</th>
+        <th scope="col">Price</th>
+        <th scope="col">Update</th>
+        <th scope="col">Delete</th>
       </tr>
     </thead>
     <tbody>
-      <tr>
+      <tr *ngFor="let book of books">
         <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
+        <td>{{book.name}}</td>
+        <td>{{book.author}}</td>
+        <td>{{book.isbn}}</td>
+        <td>{{book.price}}</td>
+        <td><button type="button" class="btn btn-primary">Update</button></td>
+        <td><button type="button" class="btn btn-success">Delete</button></td>
       </tr>
     </tbody>
   </table>
